<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_movie_detail"
    android:background="@color/background_grey">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.72" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <LinearLayout
            android:id="@+id/ll_img_banner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginVertical="@dimen/dimen_8dp"
            android:minWidth="320dp"
            android:minHeight="440dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal"
            android:background="@color/background_grey">
            <ImageView
                android:id="@+id/img_banner"
                android:layout_width="240dp"
                android:layout_height="330dp"
                android:layout_gravity="center"
               />
        </LinearLayout>

        <TextView
            android:id="@+id/title_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
            android:text="@string/title_label"
            android:textSize="@dimen/dimen_16sp"
            />
        <TextView
            android:id="@+id/title_val"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
            android:text="@string/title_label"
            android:textSize="@dimen/dimen_16sp"
            />

        <TextView
            android:id="@+id/crew_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/title_val"
            android:text="@string/crew_label"
            android:textSize="@dimen/dimen_16sp"
            />
        <TextView
            android:id="@+id/crew_val"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_val"
            android:text="@string/crew_label"
            android:textSize="@dimen/dimen_16sp"
            />

        <TextView
            android:id="@+id/rating_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/crew_val"
            android:text="@string/rating_label"
            android:textSize="@dimen/dimen_16sp"
            />
        <TextView
            android:id="@+id/rating_val"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/crew_val"
            android:text="@string/rating_label"
            android:textSize="@dimen/dimen_16sp"
            />

        <TextView
            android:id="@+id/rating_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/rating_val"
            android:text="@string/rating_count_label"
            android:textSize="@dimen/dimen_16sp"
            />
        <TextView
            android:id="@+id/rating_count_val"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_val"
            android:text="@string/rating_count_label"
            android:textSize="@dimen/dimen_16sp"
            />

        <TextView
            android:id="@+id/year_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/rating_count_val"
            android:text="@string/year_relase"
            android:textSize="@dimen/dimen_16sp"
            />
        <TextView
            android:id="@+id/year_label_val"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_count_val"
            android:text="@string/year_relase"
            android:textSize="@dimen/dimen_16sp"
            />
</androidx.constraintlayout.widget.ConstraintLayout>

